[gd_scene load_steps=30 format=3 uid="uid://cbb5qfdj1r0sb"]

[ext_resource type="Script" path="res://scenes/game/characters/player/player.gd" id="1_hkbnf"]
[ext_resource type="PackedScene" uid="uid://61w51ai88ja0" path="res://scenes/HUD/death_screen/death_screen.tscn" id="2_ee4nu"]
[ext_resource type="PackedScene" uid="uid://36kt0ngexo1t" path="res://scenes/HUD/victory_screen/victory_screen.tscn" id="3_0kecm"]
[ext_resource type="Texture2D" uid="uid://dgx67f1crxu83" path="res://scenes/game/characters/player/sprite_sheet/chara_run_sheet.png" id="4_8o6kq"]
[ext_resource type="Texture2D" uid="uid://cunedphba4b6s" path="res://scenes/game/characters/player/sprite_sheet/chara_run_sheet_n.png" id="5_atgh3"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/CharacterStateMachine.gd" id="6_wfvl0"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/AirState.gd" id="6_wvrpb"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/IdleState.gd" id="7_xcc5y"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/ClimbingState.gd" id="9_0x0ia"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/CastingState.gd" id="10_v8iwg"]
[ext_resource type="Script" path="res://scenes/HUD/HP_bar_label.gd" id="11_7sifh"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/DashingState.gd" id="11_bxnc5"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/WalkingState.gd" id="12_eyoi0"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/input_check.gd" id="12_oovai"]
[ext_resource type="Script" path="res://scenes/game/characters/player/States/DeadState.gd" id="13_1kak5"]
[ext_resource type="Script" path="res://scenes/game/characters/player/magic/magic_handler.gd" id="15_eafol"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_epkqn"]
radius = 8.0
height = 56.0

[sub_resource type="CanvasTexture" id="CanvasTexture_vlif7"]
diffuse_texture = ExtResource("4_8o6kq")
normal_texture = ExtResource("5_atgh3")

[sub_resource type="Animation" id="Animation_7o5yl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5k683"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yxkmw"]
resource_name = "fall_end"
length = 0.300003
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [34, 35, 36]
}

[sub_resource type="Animation" id="Animation_1qfku"]
resource_name = "fall_loop"
length = 0.300003
loop_mode = 2
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_2wg68"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_40n6q"]
resource_name = "jump_start"
length = 0.533336
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, -2, -2, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_w4qte"]
resource_name = "jump_top"
length = 0.200003
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [26, 27, 28]
}

[sub_resource type="Animation" id="Animation_mxedb"]
resource_name = "run"
length = 0.400002
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666666, 0.133333, 0.2, 0.266666, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_n7lfy"]
resource_name = "run_start"
length = 0.280002
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_rq06s"]
resource_name = "run_stop"
length = 0.200005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twtli"]
_data = {
"RESET": SubResource("Animation_7o5yl"),
"death": SubResource("Animation_5k683"),
"fall_end": SubResource("Animation_yxkmw"),
"fall_loop": SubResource("Animation_1qfku"),
"idle": SubResource("Animation_2wg68"),
"jump_start": SubResource("Animation_40n6q"),
"jump_top": SubResource("Animation_w4qte"),
"run": SubResource("Animation_mxedb"),
"run_start": SubResource("Animation_n7lfy"),
"run_stop": SubResource("Animation_rq06s")
}

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_hkbnf")

[node name="playerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_epkqn")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.152542, 0.154661)
texture = SubResource("CanvasTexture_vlif7")
hframes = 13
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_twtli")
}

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state")]
script = ExtResource("6_wfvl0")
character = NodePath("..")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "walking_state", "air_state", "dashing_state", "climbing_state", "casting_state", "dead_state")]
script = ExtResource("7_xcc5y")
idle_state = NodePath(".")
walking_state = NodePath("../Walking")
air_state = NodePath("../Air")
dashing_state = NodePath("../Dashing")
climbing_state = NodePath("../Climbing")
casting_state = NodePath("../Casting")
dead_state = NodePath("../Dead")

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "walking_state", "air_state", "dashing_state", "climbing_state", "casting_state", "dead_state")]
script = ExtResource("6_wvrpb")
idle_state = NodePath("../Idle")
walking_state = NodePath("../Walking")
air_state = NodePath(".")
dashing_state = NodePath("../Dashing")
climbing_state = NodePath("../Climbing")
casting_state = NodePath("../Casting")
dead_state = NodePath("../Dead")
can_jump = false

[node name="Climbing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "walking_state", "air_state", "dashing_state", "climbing_state", "casting_state", "dead_state")]
script = ExtResource("9_0x0ia")
idle_state = NodePath("../Idle")
walking_state = NodePath("../Walking")
air_state = NodePath("../Air")
dashing_state = NodePath("../Dashing")
climbing_state = NodePath(".")
casting_state = NodePath("../Casting")
dead_state = NodePath("../Dead")
can_move = false
can_fall = false
can_dash = false
can_climb = false

[node name="climb_detach" type="Timer" parent="CharacterStateMachine/Climbing"]
wait_time = 0.5

[node name="just_detached" type="Timer" parent="CharacterStateMachine/Climbing"]
wait_time = 0.5

[node name="Casting" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "walking_state", "air_state", "dashing_state", "climbing_state", "casting_state", "dead_state")]
script = ExtResource("10_v8iwg")
idle_state = NodePath("../Idle")
walking_state = NodePath("../Walking")
air_state = NodePath("../Air")
dashing_state = NodePath("../Dashing")
climbing_state = NodePath("../Climbing")
casting_state = NodePath(".")
dead_state = NodePath("../Dead")
can_move = false
can_fall = false
can_dash = false
can_jump = false
can_climb = false
can_cast = false

[node name="magic_handler" type="Node" parent="CharacterStateMachine/Casting" node_paths=PackedStringArray("previous_state")]
script = ExtResource("15_eafol")
previous_state = NodePath("../../Idle")

[node name="magic_orb_cooldown" type="Timer" parent="CharacterStateMachine/Casting/magic_handler"]
process_mode = 3
one_shot = true

[node name="dark_sphere_cooldown" type="Timer" parent="CharacterStateMachine/Casting/magic_handler"]
process_mode = 3
wait_time = 5.0
one_shot = true

[node name="Dead" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "walking_state", "air_state", "dashing_state", "climbing_state", "casting_state", "dead_state")]
script = ExtResource("13_1kak5")
idle_state = NodePath("../Idle")
walking_state = NodePath("../Walking")
air_state = NodePath("../Air")
dashing_state = NodePath("../Dashing")
climbing_state = NodePath("../Climbing")
casting_state = NodePath("../Casting")
dead_state = NodePath(".")
can_move = false
can_dash = false
can_jump = false
can_climb = false
can_cast = false

[node name="Dashing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "walking_state", "air_state", "dashing_state", "climbing_state", "casting_state", "dead_state")]
script = ExtResource("11_bxnc5")
idle_state = NodePath("../Idle")
walking_state = NodePath("../Walking")
air_state = NodePath("../Air")
dashing_state = NodePath(".")
climbing_state = NodePath("../Climbing")
casting_state = NodePath("../Casting")
dead_state = NodePath("../Dead")
can_move = false
can_fall = false
can_dash = false
can_jump = false
can_climb = false

[node name="Walking" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "walking_state", "air_state", "dashing_state", "climbing_state", "casting_state", "dead_state")]
script = ExtResource("12_eyoi0")
idle_state = NodePath("../Idle")
walking_state = NodePath(".")
air_state = NodePath("../Air")
dashing_state = NodePath("../Dashing")
climbing_state = NodePath("../Climbing")
casting_state = NodePath("../Casting")
dead_state = NodePath("../Dead")

[node name="input_check" type="Node" parent="CharacterStateMachine"]
script = ExtResource("12_oovai")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HP_bar" type="Label" parent="HUD"]
layout_mode = 0
offset_left = -32.0
offset_top = -49.0
offset_right = 8.0
offset_bottom = -26.0

[node name="victory_screen" parent="HUD" instance=ExtResource("3_0kecm")]
visible = false
layout_mode = 1
offset_left = -400.0
offset_top = -191.0
offset_right = -400.0
offset_bottom = -191.0

[node name="death_screen" parent="HUD" instance=ExtResource("2_ee4nu")]
visible = false
layout_mode = 1
offset_left = -394.0
offset_top = -235.0
offset_right = -394.0
offset_bottom = -235.0

[node name="state_debug" type="Label" parent="HUD" node_paths=PackedStringArray("state_machine")]
layout_mode = 0
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
offset_bottom = -57.0
script = ExtResource("11_7sifh")
state_machine = NodePath("../../CharacterStateMachine")

[connection signal="timeout" from="CharacterStateMachine/Climbing/climb_detach" to="CharacterStateMachine/Climbing" method="_on_climb_detach_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Climbing/just_detached" to="CharacterStateMachine/Climbing" method="_on_just_detached_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Casting/magic_handler/magic_orb_cooldown" to="CharacterStateMachine/Casting/magic_handler" method="_on_magic_orb_cooldown_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Casting/magic_handler/dark_sphere_cooldown" to="CharacterStateMachine/Casting/magic_handler" method="_on_dark_sphere_cooldown_timeout"]
